--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <li>
         <label>Include Cover</label>
         <select class="picker" for="includeCover">
-          <option value="">Include Cover</option>
+          <!-- <option value="">Include Cover</option> -->
           <option value="true">True</option>
           <option value="false">False</option>
         </select>
@@ -55,6 +55,7 @@
         <label>Background</label>
         <input class="picker" for="background" type="text" />
       </li>
+      <li></li>
       <li>
         <label>S.M. Position</label>
         <select class="picker" for="socialMediaPosition">
