--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,10 @@
         <label>Background</label>
         <input class="picker" for="background" type="text" />
       </li>
-      <li></li>
+      <li>
+        <label>Color fondo RRSS</label>
+        <input class="picker" for="colorbtn" type="text" />
+      </li>
       <li>
         <label>S.M. Position</label>
         <select class="picker" for="socialMediaPosition">
